# rowing-dynamics-analysis

./: .gitignore  .gitmodules  README.md  requirements.txt
journal/: main.tex
pose-extraction-test/: .gitignore  README.md  planning.MD  plot_angles.py  pyproject.toml
pose-extraction-test/rowing_pose/: __init__.py  cli.py  config.py  crop_track.py  io_video.py  motionbert_format.py  motionbert_lift.py  person_tracking.py  pipeline.py  pose2d_mmpose.py  pose2d_sports2d.py  pose_smoothing.py  progress.py  rig_tracker.py  stabilize.py  ui_annotate.py  viz.py
pose-extraction-test/tests/: test_skeletons.py  test_sports2d_integration.py
pose-extraction-test/ui_streamlit/: README.md  app.py  requirements-ui.txt
sports2d_app/: PLAN.md  README.md  app.py  app_cli.py  motionbert_3d.py  overlay_3d.py  parse_sports2d.py  plot_angles.py  requirements.txt  runner_sports2d.py  stroke_signal.py
sports2d_app/rowing_pose/: cli.py  config.py  crop_track.py  kinematics.py  model_assets.py  motionbert_format.py  motionbert_lift.py  pipeline.py  pose2d_mmpose.py  pose_smoothing.py  rig_tracker.py  scaling.py  skeletons.py
sports2d_app/runs/gb8_20260203_210816/exports/: input_Sports2D_angles_person00_angles.csv  input_Sports2D_px_person00_points.csv  input_Sports2D_px_person00_points.npz
sports2d_app/runs/gb8_20260203_210816/sports2d/: logs.txt
sports2d_app/runs/gb8_20260203_210816/sports2d/input_Sports2D/: input_Sports2D_angles_person00.mot  input_Sports2D_m_person00.trc  input_Sports2D_px_person00.trc
