[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rowing-pose"
version = "0.1.0"
description = "Rowing video pose extraction pipeline: stabilization, 2D/3D pose estimation, kinematics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Rowing Pose Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "torch>=1.10.0",
    "torchvision>=0.11.0",
    "mmpose>=1.0.0",
    "mmpretrain",
    "mmdet>=3.0.0",
    "mmcv>=2.0.0",
    "pyyaml>=6.0.0",
    "easydict>=1.10",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "ruff>=0.0.260",
]
tracking = [
    "ultralytics>=8.0.0",
    "deep_sort_realtime>=1.3.2",
]

[project.scripts]
rowing-pose = "rowing_pose.cli:main"

[project.urls]
Homepage = "https://github.com/rowing-pose/rowing-pose"
Documentation = "https://github.com/rowing-pose/rowing-pose#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["rowing_pose*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]
